start setting up Enrollment Meter to go positive

--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
-        <style media="screen">
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Document</title>
+          <style media="screen">
 
           #graph1,
           #graph1-percent,
@@ -19,7 +24,8 @@
           }
 
         </style>
-
+      </head>
+      <body>
       <!-- Chart 1 -->
       <svg id="pieChart" width="250" height="250" viewBox="-10 -10 240 240">
         <filter id="dropShadow1">
@@ -206,4 +212,6 @@
           </g>
       </svg>
 
-      <script src="/Documents/enrollmentmeter/assets/js/index.js"></script>
+      <script src="/assets/js/index.js"></script>
+    </body>
+    </html>
