--- a/index.html
+++ b/index.html
@@ -80,7 +80,8 @@
                     fill="#c60b46"
                     text-anchor="end">
               </text>
-              <text x="120" y="58"
+              <text id="headcount-currentLabel"
+                    x="120" y="58"
                     font-family="Helvetica"
                     font-size="12"
                     fill="#c60b46">
@@ -173,7 +174,8 @@
                     fill="#c60b46"
                     text-anchor="end">
               </text>
-              <text x="120" y="58"
+              <text id="creditHours-currentLabel"
+                    x="120" y="58"
                     font-family="Helvetica"
                     font-size="12"
                     fill="#c60b46">
