remove forward slash from assets javascript issue

--- a/index.html
+++ b/index.html
@@ -214,6 +214,6 @@
           </g>
       </svg>
 
-      <script src="/assets/js/index.js"></script>
+      <script src="assets/js/index.js"></script>
     </body>
     </html>
