--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </head>
       <body>
       <!-- Chart 1 -->
-      <svg id="pieChart" width="250" height="250" viewBox="-10 -10 240 240">
+      <svg id="pieChart" width="250" height="290" viewBox="-10 -10 240 240">
         <filter id="dropShadow1">
           <feGaussianBlur in="SourceAlpha" stdDeviation="2" />
           <feOffset dx="1" dy="2" />
@@ -113,15 +113,24 @@
               <text x="53" y="214"
                     font-family="Helvetica"
                     font-size="18"
+                    font-weight="bold"
                     fill="#000000">
                 Headcount
+              </text>
+              <text id="graph1-term" x="96" y="235"
+                    font-family="Helvetica"
+                    font-size="18"
+                    font-weight="bold"
+                    fill="#000000"
+                    text-anchor="middle">
+                Fall 2018
               </text>
             </g>
           </g>
       </svg>
 
       <!-- Chart 2 -->
-      <svg id="pieChart2" width="250" height="250" viewBox="-10 -10 240 240">
+      <svg id="pieChart2" width="250" height="290" viewBox="-10 -10 240 240">
         <filter id="dropShadow2">
           <feGaussianBlur in="SourceAlpha" stdDeviation="2" />
           <feOffset dx="1" dy="2" />
@@ -204,11 +213,21 @@
                     fill="#0f3b63"
                     text-anchor="middle">
               </text>
-              <text x="53" y="214"
+              <text x="96" y="214"
                     font-family="Helvetica"
                     font-size="18"
+                    font-weight="bold"
+                    text-anchor="middle"
                     fill="#000000">
                 Credit Hours
+              </text>
+              <text id="graph2-term" x="96" y="235"
+                    font-family="Helvetica"
+                    font-size="18"
+                    font-weight="bold"
+                    fill="#000000"
+                    text-anchor="middle">
+                Fall 2018
               </text>
             </g>
           </g>
